--- a/Vocable/Common/Views/WarningView.xib
+++ b/Vocable/Common/Views/WarningView.xib
@@ -8,7 +8,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" restorationIdentifier="WarningView" id="vne-Os-cO5" userLabel="warningView">
+        <view contentMode="scaleToFill" restorationIdentifier="WarningView" id="vne-Os-cO5" userLabel="warningView" customClass="WarningView" customModule="Vocable" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="414" height="96"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
@@ -48,6 +48,9 @@
                     <integer key="value" value="10"/>
                 </userDefinedRuntimeAttribute>
             </userDefinedRuntimeAttributes>
+            <connections>
+                <outlet property="label" destination="OzB-7o-j7j" id="JNa-Yv-689"/>
+            </connections>
             <point key="canvasLocation" x="44.927536231884062" y="-235.04464285714283"/>
         </view>
     </objects>
